Fixing spacing around icons.

--- a/FantasyCritic.Web/ClientApp/src/css/site.css
+++ b/FantasyCritic.Web/ClientApp/src/css/site.css
@@ -96,6 +96,10 @@ div.alert {
     padding: 5px;
 }
 
+svg, img.critic-royale-nav {
+    margin-right: 4px;
+}
+
 .fb-icon {
     color: #3b5998;
 }
